--- a/src/app/cookbook/cookbook.component.html
+++ b/src/app/cookbook/cookbook.component.html
@@ -2,10 +2,16 @@
   <h2>Recipes</h2>
 
   <md-list>
-    <md-list-item *ngFor="let item of recipes | async" >
+    <md-list-item *ngFor="let recipe of recipes | async">
       <div fxLayout="row" fxLayoutAlign="space-between center" fxFill>
                 <div fxFlex fxLayout="column" fxLayoutAlign="space-between stretch">
-          <h3>{{item.title}}</h3>
+          <h3>{{recipe.title}}</h3>
+          <section *ngIf="recipe.ingredients">
+            <span>Ingredients:</span>
+            <ul>
+              <li *ngFor="let ing of recipe.ingredients">{{ing}}</li>
+            </ul>
+          </section>
         </div>        
       </div>
     </md-list-item>
