--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -9,7 +9,6 @@
     <div *ngIf="(af.auth | async)?.uid">
       <button md-menu-item [routerLink]="['/todos']">Todos</button>
       <button md-menu-item [routerLink]="['/cookbook']">Cook Book</button>
-      <button md-menu-item [routerLink]="['/chat']">Chat</button>
       <button md-menu-item (click)="logout()">Logout</button>
     </div>
 
@@ -18,7 +17,7 @@
     </div>
   </md-menu>
 
-  <span>angular2-firebase-material-demo</span>
+  <span>My Cookbook</span>
 
   <div class="fill"></div>
 
