--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$frontend-app-primary: mat-palette($mat-blue-grey);
-$frontend-app-accent: mat-palette($mat-blue, A200, A100, A400);
+$frontend-app-primary: mat-palette($mat-indigo);
+$frontend-app-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $frontend-app-warn: mat-palette($mat-red);
