--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,10 +5,10 @@
     </div>
 
     <div class="buttons">
-      <button md-raised-button color="primary" (click)="login('Facebook')">Facebook</button>
-      <button md-raised-button color="primary" (click)="login('Google')">Google</button>
-      <button md-raised-button color="primary" (click)="login('Twitter')">Twitter</button>
-      <button md-raised-button color="primary" (click)="login('Github')">GitHub</button>
+      <!-- <button md-raised-button color="primary" (click)="login('Facebook')">Facebook</button> -->
+      <button md-raised-button color="primary" (click)="login('Google')">Google</button> 
+      <!-- <button md-raised-button color="primary" (click)="login('Twitter')">Twitter</button> -->
+      <!-- <button md-raised-button color="primary" (click)="login('Github')">GitHub</button> -->
     </div>
   </div>
 </div>
